--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "start": "nest start"
   },
   "dependencies": {
+    "@nestjs/cli": "^7.5.1",
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/schematics": "^7.1.3",
     "@prisma/cli": "^2.14.0",
     "@prisma/client": "^2.14.0",
     "aws-sdk": "^2.828.0",
@@ -30,11 +32,10 @@
     "jsonwebtoken": "^8.5.1",
     "mime-types": "^2.1.28",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "tslib": "^2.1.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.5.1",
-    "@nestjs/schematics": "^7.1.3",
     "@types/aws-sdk": "^2.7.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/busboy": "^0.2.3",
@@ -45,7 +46,6 @@
     "@types/mime-types": "^2.1.0",
     "@types/node": "^14.14.6",
     "ts-node": "^9.0.0",
-    "tslib": "^2.1.0",
     "typescript": "^4.0.5"
   },
   "rootDir": "src"
