--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "docker:start": "docker-compose up -d",
     "generate": "./node_modules/.bin/prisma generate",
     "prisma": "prisma migrate dev --preview-feature",
-    "seed": "ts-node-dev -r dotenv/config migration/seed",
+    "seed": "ts-node -r dotenv/config migration/seed",
     "start": "nest start"
   },
   "dependencies": {
